# wedding_planning

./: .env.example  .gitignore  .lintstagedrc.json  Dockerfile  Dockerfile.frontend.dev  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  release.sh  start.sh  tsconfig.json  vite.config.js
.husky/: pre-commit
backend/: config.py  dependencies.py  geo.py  main.py  requirements.txt
backend/i18n/: cs.json  ru.json  sk.json
backend/routers/: authorization.py  family_structure.py  invitation_lists.py  seating.py
backend/routers/utils/: compression.py
backend/templates/: landing.html
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: landing.css
frontend/src/: App.vue  landing.scss  style.css
frontend/src/components/: AuthenticatedApp.vue  FinalListView.vue  InvitationComparisonTable.vue  InvitationListEditMenu.vue  InvitationListsManager.vue  LandingPage.vue  LoginScreen.vue  PersonInfoDisplay.vue  TableSeating.vue
frontend/src/composables/: useAuth.ts  useBackendStorage.ts  useBaseGraph.ts  useGenealogyData.ts  useInvitationLists.ts  useSeatingData.ts  useStoredData.ts  useTableSeating.js  useTouchDragDrop.ts
src/: App.vue
src/components/: GenealogyTree.vue  GenealogyTreeSidebar.vue  InvitationListDropdown.vue  PersonNode.vue  TableSeating.vue  TableSeatingSidebar.vue
src/composables/: useBaseGraph.ts  useGenealogyData.js  useGenealogyData.ts  useInvitationLists.ts  useLocalStorage.ts  useSidebarState.js  useTableSeating.js
(+19 files in other folders)
